@@ -1,3 +1,9 @@
+Saturday, November 7, 2009
+	Chris Thielen:
+		* UI logic about mouse focus is much better
+		* Buttons now visibly click
+		* Began work on fixing window border transparency (mostly Photoshop work)
+
 Wednesday, November 4, 2009
 	Chris Thielen:
 		* Plugged some memory leaks that moses7 mentioned in #epiar
